--- a/app/assets/javascripts/note_mod/note_modal.coffee.erb
+++ b/app/assets/javascripts/note_mod/note_modal.coffee.erb
@@ -1,9 +1,10 @@
-class NoteModal
+class @NoteModal
   #笔记模态框 用来 修改 和创建 新的笔记弹出来
   constructor: (@$elm)->
     @bind_events()
     @$modal_dialog = @$elm.find('#modal-dialog')
     @$modal_body = @$elm.find('.modal-dialog .modal-body')
+    @path = "<%= NoteMod.get_mount_prefix %>"
 
   make_model_dialog_page: (title,body)->
     @$modal_dialog.find('.modal-title').html(title)
@@ -61,7 +62,7 @@ class NoteModal
     # 添加调用模态框
     @$elm.on "click", ".note-crt", (event)=>
       $.ajax
-        url: "/notes/new",
+        url: @path+"/notes/new",
         method: "get",
         dataType: "json"
       .success (msg) =>
@@ -72,7 +73,7 @@ class NoteModal
       title        = @$modal_body.find('.note-title').val()
       content = @$modal_body.find('.note-content').val()
       $.ajax
-        url: "/notes"
+        url: @path+"/notes"
         method: "post"
         data:{
           'note[title]':title
@@ -94,7 +95,7 @@ class NoteModal
       @$editing_btn_position = $(event.target).closest('.note-item') 
       note_id = $(event.target).closest('.note-item').find('.note-item-head .hidden p').text()
       $.ajax
-        url: "/notes/"+note_id+"/edit",
+        url: @path+"/notes/"+note_id+"/edit",
         method: "get",
         dataType: "json"
       .success (msg) =>
@@ -124,17 +125,16 @@ class NoteModal
         @set_error_class(msg)
 
     # 删除的效果
-    @$elm.on "click",".delete-note-btn",->
-      that = this
-      id = $(that).parent().parent().find('.hidden p').text()
+    @$elm.on "click",".delete-note-btn",(event)=>
+      id = $(event.target).parent().parent().find('.hidden p').text()
       res =  confirm("确认删除?")
       if res == true     
         $.ajax
-          url: "/notes/"+id,
+          url: @path+"/notes/"+id,
           method: "delete",
           dataType: "json"
-        .success (msg) ->
-          $(that).closest('.note-item').fadeOut();
+        .success (msg) =>
+          $(event.target).closest('.note-item').fadeOut();
         
 jQuery(document).on 'page:change', ->
   if (".private-note-page").length > 0
